Add JVM metrics to logging