@@ -3,8 +3,9 @@
 # This runs inside the application docker container, all at /app
 
 JAR_FILE=$1
-#GLOBAL_SWITCHES="--add-modules java.xml.bind"
-GLOBAL_SWITCHES=
+#JVM_SWITCHES="--add-modules java.xml.bind"
+#JVM_SWITCHES="-XshowSettings:vm -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1"
+JVM_SWITCHES="-XshowSettings:vm -XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport"
 SCALA_SWITCHES="-Dscala.concurrent.context.minThreads=4 -Dscala.concurrent.context.numThreads=x4 -Dscala.concurrent.context.maxThreads=64"
 
 echo JAR_FILE=${JAR_FILE}
@@ -16,7 +17,7 @@ echo ===========================================================================
 
 if [[ "$LPTEMPLATEENVPREFIX_OPERATION" == "lptemplateservicename" ]]; then
     set -x
-    exec java -cp "${JAR_FILE}" ${GLOBAL_SWITCHES} ${SCALA_SWITCHES} com.lptemplatecompany.lptemplatedivision.lptemplateservicename.AppMain
+    exec java -cp "${JAR_FILE}" ${JVM_SWITCHES} ${SCALA_SWITCHES} com.lptemplatecompany.lptemplatedivision.lptemplateservicename.AppMain
 
 else
   echo "Unknown option '$LPTEMPLATEENVPREFIX_OPERATION'"
